--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -139,10 +139,8 @@ v2.3.3.  (July 22, 2009)
 The Wasatch component requires the following:
 \begin{itemize}
   \item git
-  \item boost-1.44
+  \item boost-1.46
   \item cmake 2.8 or above
-  \item libhdf5-serial-1.6.6-0 
-  \item libhdf5-serial-dev
 \end{itemize}
 \section{OS Version Dependencies}
 
@@ -160,19 +158,36 @@ libxml2-dev zlib1g-dev liblapack-dev cmake libglew1.5-dev \
 libglui-dev libxmu-dev
 \end{verbatim}
 
-\noindent If you are interested in compiling the Wasatch component execute:
+\noindent Optional: Additional libraries needed for the Wasatch component:
 \begin{verbatim}
-  aptitude install libhdf5-serial-1.6.6-0 
-  aptitude install libhdf5-serial-dev
   aptitude install git-core
+\end{verbatim}  
+ \hspace{0.125in}Lenny:
+\begin{verbatim}
   aptitude install cmake > 2.8 (from squeeze)
-
-  download boost-1.44 from www.boost.org
+  download boost-1.46 from www.boost.org
   bootstrap.sh --prefix=path/to/installation/prefix
   bjam threading=single install
 \end{verbatim}
+\hspace{0.125in}Squeeze:
+\begin{verbatim}
+  aptitude install cmake > 2.8 (from squeeze)
+  
+  sudo aptitude install  libboost-date-time1.46-dev \
+  libboost-date-time1.46.0          \
+  libboost-iostreams1.46.0          \   
+  libboost-program-options1.46-dev  \
+  libboost-program-options1.46.0    \
+  libboost-serialization1.46-dev    \
+  libboost-serialization1.46.0      \
+  libboost-signals1.46-dev          \
+  libboost-signals1.46.0            \
+  libboost-thread1.46-dev           \
+  libboost-thread1.46.0             \
+  libboost1.46-dev
+\end{verbatim}
 
-\noindent Once these libraries are installed, Teem and VisIt can be installed
+\noindent Once these libraries are installed, VisIt can be installed
 followed by installation of \textbf{Uintah}.
 
 \noindent To install the latest \TT{Nvidia}video drivers:
@@ -989,7 +1004,6 @@ PETSC_ARCH=linux-gnu-c-real-opt <= Specifies PETSc architecture
 \end{verbatim}
 To compile the Wasatch component add:
 \begin{verbatim}
-  --with-hdf5
   --with-boost=<path to boost install>
   --enable-wasatch_3p
 \end{verbatim}
