Updates to the documentation by Scott Bardenhagen for the damage models in UCNH as well as new documentation about the ElasticPlastic model and the Mie-Gruneisen EOS.

--- a/doc/UserGuide/mpm.bib
+++ b/doc/UserGuide/mpm.bib
@@ -431,6 +431,16 @@
 	ADDRESS = "New York",
 	YEAR = "1954"   }
 
+@TECHREPORT{Steinberg91,
+    AUTHOR       = "Steinberg, D. J. ", 
+    YEAR         = "1991",
+    TITLE        = "Equation of state and strength properties of
+                    selected materials",  
+    NUMBER       = "UCRL-MA-106439", 
+    INSTITUTION  = "Lawrence Livermore National Laboratory", 
+    ADDRESS      = "Livermore, California",
+    }
+%
 @ARTICLE{sulsky_axisym_1996,
 	AUTHOR = "Sulsky, D. and Schreyer, H.L.",
 	TITLE  = "Axisymmetric form of the material point method with applications to upsetting and Taylor impact problems",
